[gd_scene load_steps=47 format=3 uid="uid://dgenrromaqu5l"]

[ext_resource type="Script" path="res://personagem/inimigo/boss/duval/duval_node.gd" id="1_wuvlj"]
[ext_resource type="Texture2D" uid="uid://bq5prc63akic4" path="res://assets/personagem/inimigo/boss/duval/attack_pirate.png" id="2_jgpo8"]
[ext_resource type="Texture2D" uid="uid://b3aehtosphrd5" path="res://assets/personagem/inimigo/boss/duval/death_pirate.png" id="3_l2pul"]
[ext_resource type="Texture2D" uid="uid://2pgfpmw0xym2" path="res://assets/personagem/inimigo/boss/duval/attack_pirate_2.png" id="4_205ap"]
[ext_resource type="Texture2D" uid="uid://ujb65ktjpgig" path="res://assets/personagem/inimigo/boss/duval/follow_pirate.png" id="5_2ol0m"]
[ext_resource type="Texture2D" uid="uid://bdebj0aropftr" path="res://assets/personagem/inimigo/boss/duval/idle_pirate.png" id="6_8kbde"]
[ext_resource type="Script" path="res://personagem/inimigo/recursos/HitBoxBoss1.gd" id="7_c0kh3"]
[ext_resource type="Script" path="res://personagem/inimigo/recursos/HurtBoxBoss1.gd" id="8_5pn0d"]
[ext_resource type="AudioStream" uid="uid://dqp4wa14a8k3l" path="res://assets/musica/493914__damnsatinist__light-punch.wav" id="8_pg7jb"]
[ext_resource type="FontFile" uid="uid://chny6dp0c5v1" path="res://assets/font/m5x7.ttf" id="9_7v5d4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w3vgp"]
atlas = ExtResource("2_jgpo8")
region = Rect2(0, 0, 50, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq6w3"]
atlas = ExtResource("2_jgpo8")
region = Rect2(50, 0, 50, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2k2"]
atlas = ExtResource("2_jgpo8")
region = Rect2(100, 0, 50, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg34j"]
atlas = ExtResource("2_jgpo8")
region = Rect2(147, 0, 76, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qeao"]
atlas = ExtResource("2_jgpo8")
region = Rect2(223, 0, 76, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgwvh"]
atlas = ExtResource("2_jgpo8")
region = Rect2(300, 0, 50, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f3qk"]
atlas = ExtResource("3_l2pul")
region = Rect2(85, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b34r"]
atlas = ExtResource("3_l2pul")
region = Rect2(145, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwtei"]
atlas = ExtResource("3_l2pul")
region = Rect2(205, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_504jw"]
atlas = ExtResource("3_l2pul")
region = Rect2(265, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bid2"]
atlas = ExtResource("4_205ap")
region = Rect2(0, 0, 60, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kwqd"]
atlas = ExtResource("4_205ap")
region = Rect2(54, 0, 55, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w1fl"]
atlas = ExtResource("4_205ap")
region = Rect2(109, 0, 88, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_slkei"]
atlas = ExtResource("4_205ap")
region = Rect2(183, 0, 51, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_idtkc"]
atlas = ExtResource("5_2ol0m")
region = Rect2(0, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_5alr6"]
atlas = ExtResource("5_2ol0m")
region = Rect2(52, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3agkk"]
atlas = ExtResource("5_2ol0m")
region = Rect2(104, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_asked"]
atlas = ExtResource("5_2ol0m")
region = Rect2(156, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy4gj"]
atlas = ExtResource("5_2ol0m")
region = Rect2(208, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d3kj"]
atlas = ExtResource("5_2ol0m")
region = Rect2(260, 0, 52, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3vri"]
atlas = ExtResource("6_8kbde")
region = Rect2(0, 0, 54, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyiai"]
atlas = ExtResource("6_8kbde")
region = Rect2(54, 0, 54, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxjd2"]
atlas = ExtResource("6_8kbde")
region = Rect2(108, 0, 54, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0vms"]
atlas = ExtResource("6_8kbde")
region = Rect2(162, 0, 54, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_glwwb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3vgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq6w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg34j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qeao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgwvh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f3qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b34r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwtei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_504jw")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bid2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kwqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w1fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slkei")
}],
"loop": true,
"name": &"distance attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idtkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5alr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3agkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asked")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy4gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d3kj")
}],
"loop": true,
"name": &"follow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3vri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyiai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxjd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0vms")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6tgx"]
size = Vector2(27, 49)

[sub_resource type="Animation" id="Animation_pnao6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxBoss1/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("direita:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("esquerda:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4c8yb"]
resource_name = "attack"
length = 3.2
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2.16667, 2.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxBoss1/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("direita:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("esquerda:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nlgej"]
resource_name = "death"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("direita:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("esquerda:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yodw7"]
resource_name = "distance_attack"
length = 3.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"distance attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxBoss1/hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 3.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("direita:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("esquerda:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_orjbq"]
resource_name = "follow"
length = 2.6
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"follow"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("esquerda:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("direita:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a06sc"]
resource_name = "idle"
length = 2.51
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.75, 1.5, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBoxBoss1/hurtbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("direita:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("esquerda:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_llskp"]
_data = {
"RESET": SubResource("Animation_pnao6"),
"attack": SubResource("Animation_4c8yb"),
"death": SubResource("Animation_nlgej"),
"distance_attack": SubResource("Animation_yodw7"),
"follow": SubResource("Animation_orjbq"),
"idle": SubResource("Animation_a06sc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2dmw"]
size = Vector2(21.75, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1e6bt"]
size = Vector2(29, 49)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdmpm"]
bg_color = Color(0.586447, 0, 0.0602193, 1)

[node name="DuvalNode" type="CharacterBody2D"]
z_index = 3
position = Vector2(137, 233)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wuvlj")

[node name="frames" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -3)
sprite_frames = SubResource("SpriteFrames_glwwb")
animation = &"idle"
flip_h = true

[node name="box" type="CollisionShape2D" parent="."]
position = Vector2(4.5, 0.5)
shape = SubResource("RectangleShape2D_u6tgx")
debug_color = Color(0.152941, 0.588235, 0.729412, 0)

[node name="animacao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_llskp")
}

[node name="HitBoxBoss1" type="Area2D" parent="." groups=["HitBoxBoss"]]
script = ExtResource("7_c0kh3")

[node name="hitbox" type="CollisionShape2D" parent="HitBoxBoss1"]
position = Vector2(-22, 0)
shape = SubResource("RectangleShape2D_g2dmw")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="HurtBoxBoss1" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("8_5pn0d")

[node name="hurtbox" type="CollisionShape2D" parent="HurtBoxBoss1"]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_1e6bt")

[node name="direita" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)

[node name="esquerda" type="RayCast2D" parent="."]
target_position = Vector2(-48, 0)

[node name="soundDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pg7jb")

[node name="BossInfo" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="BossInfo"]
z_index = 1
offset_left = 29.0
offset_top = 958.0
offset_right = 1988.0
offset_bottom = 1030.0
theme_override_fonts/font = ExtResource("9_7v5d4")
theme_override_font_sizes/font_size = 53
theme_override_styles/fill = SubResource("StyleBoxFlat_sdmpm")
max_value = 300.0
value = 300.0
show_percentage = false

[node name="Label" type="Label" parent="BossInfo"]
z_index = 1
offset_left = 824.0
offset_top = 883.0
offset_right = 1204.0
offset_bottom = 946.0
theme_override_fonts/font = ExtResource("9_7v5d4")
theme_override_font_sizes/font_size = 79
text = "Capitão Duval"
uppercase = true
